[project]
name = "intermodel"
version = "0.0.70"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
dependencies = [
    "httpx",
    "anthropic>=0.3.1",
    "tiktoken",
    "python-dotenv",
    "replicate",
    "asgiref",
    "tenacity",
    "tokenizers",
    "pytest>=8.3.3",
    "aiohttp>=3.10.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "pytest>=8.3.3",
]
